--- a/form.html
+++ b/form.html
@@ -7,8 +7,14 @@
     <form>
       <ol>
         <li> <b> 1.Thông tin về người góp ý </b></li>
-      
+        <label>Họ và tên: </label> 
+      <input type="text" id="hovaten" name="hovaten"> 
+      <label> Địa chỉ email: </label>
+      <input type="text" id="email" name="email">
+      <button type="submit" onlick=login()> Họ và tên </button>
         <li> <b> 2.Đóng góp ý kiến </b></li>
+         <label> Ý kiến đóng góp </label> <br>
+         <textarea id="yk" name="yk" rows="5" cols="15"></textarea>
       </ol>
     </form>
   </body>
