--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Sukacheo </title>
+    <link href="../style.css"rel="stylesheet" type ="text/css">
   </head>
   <body>
+    <h1> Đóng góp ý kiến cho thư viện của nhà trường </h1>
     <form>
-      <label>Tên đăng nhập: </label> 
-      <input type="text" id="username" name="username"> 
-      <label> Mật khẩu: </label>
-      <input type="text" id="password" name="password">
-      <button type="submit" onlick=login()> Đăng nhập </button>
+      <form action="Bai7-NV3.html" method="GET/POST"></form>
+      <ol>
+        <li><b> Thông tin về người góp ý </b> 
+              <label> Họ và tên: </label>
+      <input type="text" id="hoten" name="hoten">
+         <label> Địa chỉ email: </label>
+      <input type="text" id="email" name="email"></li>
+     <li><b> Đóng góp ý kiến <b></b> 
+         <label> Ý kiến đóng góp: </label><br>
+      <textarea id="yk" name="yk" rows="5" clos="50" ></textarea>
+      < input id="chkTruyenNgan" type = "checkbox" name = "chkTruyenNgan" > Truyện ngắn <br> 
+       <input id="chkKiNang" type = "checkbox" name = "chkKiNang"> Kĩ năng sống <br> 
+       <input id="chkCNTT" type = "checkbox" name = "chkCNTT"> Công nghệ thông tin < br> 
+       <input id="chkTruyenTranh" type = "checkbox" name = "chkTruyenTranh"> Truyện tranh < br> 
+       < input id="chkLichSu" type = "checkbox" name = "chkLichSu"> Lịch sử < br >
+       <input type="submit" name="cmd" value="Góp ý">
+     </li>
+    
+      </ol>
     </form>
-    <script src="script.js"></script>
   </body>
 </html>
